# dr-rustario

./: .gitignore  Cargo.toml  README.md  build-aarch64-cross.sh  build.rs
media/: logo.xcf
src/: build_info.rs  config.rs  game_input.rs  icon.rs  main.rs  menu_input.rs  player.rs  scale.rs  themes.rs
src/animate/: destroy.rs  dr.rs  event.rs  game_over.rs  hard_drop.rs  idle.rs  impact.rs  lock.rs  mod.rs  next_level.rs  next_level_interstitial.rs  spawn.rs  throw.rs  victory.rs  virus.rs
src/font/: mod.rs
src/game/: block.rs  bottle.rs  event.rs  geometry.rs  metrics.rs  mod.rs  pill.rs  random.rs  rules.rs
src/high_score/: event.rs  mod.rs  render.rs  table.rs
src/menu/: mod.rs  sound.rs
src/particles/: meta.rs  particle.rs  prescribed.rs  render.rs  scale.rs  source.rs
src/theme/: all.rs  animation.rs  block_mask.rs  font.rs  geometry.rs  helper.rs  image.rs  mod.rs  pause.rs  retro.rs  scene.rs  sound.rs  sprite_sheet.rs
src/theme/modern/: bottle-simple.xcf  bottle.xcf  game_metrics.rs  mod.rs
src/theme/modern/dr/: victory.txt
src/theme/n64/: mod.rs  throw.piskel  victory.piskel  wait.piskel
src/theme/n64/dr/: game-over.piskel  idle.piskel  throw.piskel
src/theme/nes/: mod.rs
src/theme/particle/: game_metrics.rs  mod.rs  vitamins.7z
src/theme/snes/: mod.rs
