[package]
name = "dr-rustario"
authors = ["Alex Haslehurst"]
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2023.06.20"
dependencies = ["sdl2", "sdl2-image", "sdl2-gfx", "sdl2-mixer", "sdl2-ttf"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[build-dependencies]
build-info-build = "0.0.31"
embed-resource = "2.2"

[dev-dependencies]
mockall = "0.11.4"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_derive = "1.0.163"
build-info = { version = "0.0.31", default-features = false, features = [] }
sdl2 = { version = "0.35", default-features = false, features = ["static-link","use-vcpkg","image","gfx","mixer","ttf"] }
confy = { version = "0.5.1", default-features = false, features = ["yaml_conf"] }
num-format = "0.4.4"

[profile.release]
strip = "symbols"
