[package]
name = "dr-rustario"
authors = ["Alex Haslehurst"]
version = "1.0.0"
edition = "2021"
resolver = "2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2024.10.21"
dependencies = ["sdl2", "sdl2-image", "sdl2-gfx", "sdl2-mixer", "sdl2-ttf"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[features]
default = ["pkgconfig"]
vcpkg = ["sdl2/static-link", "sdl2/use-vcpkg"]
pkgconfig = ["sdl2/use-pkgconfig"]
retro_handheld = []

[build-dependencies]
built = { version = "0.7.2", default-features = false, features = [] }
embed-resource = "2.4.2"

[dev-dependencies]
mockall = "0.12.1"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
serde_derive = "1.0.201"
sdl2 = { version = "0.37.0", default-features = false, features = ["image", "gfx","mixer","ttf"] }
confy = { version = "0.6.1", default-features = false, features = ["yaml_conf"] }
num-format = "0.4.4"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
titlecase = "3.1.1"
png = "0.17.14"

[profile.release]
strip = "symbols"
